Make tests easier to read